# Skeleton

./: .validation-trigger-n8n.tmp  BOOT_MANIFEST.yaml  CAPABILITY_REGISTRY.yaml  COMMANDS.yaml  DEVELOPMENT_CHAIN.yaml  HELPER_REGISTRY.yaml  MEMORY_ROUTING.yaml  MODES.yaml  OPERATOR_RULES.yaml  PROJECT_INDEX.yaml  PROJECT_REGISTRY.yaml  PROJECT_TREE.yaml  PROVIDER_ROUTING.yaml  README.md  RUNNER_EXECUTOR_REGISTRY.yaml  SOURCE_REGISTRY.yaml  STATUS_CODES.yaml  pyproject.toml
.github/: issue-1149-finalizer.gz.b64
adapters/: README.md
config/: page_publisher_profiles.yaml
core/: __init__.py  action_gate.py  audit_ledger.py  aufmass_dxf_adapter.py  aufmass_engine.py  aufmass_exporter.py  aufmass_geometry_evidence.py  aufmass_manual_adapter.py  aufmass_memory_bridge.py  aufmass_private_pilot_manifest.py  aufmass_room_matcher.py  aufmass_room_review.py  aufmass_source_pack.py  aufmass_spatial_model.py  aufmass_workbook_writer.py  boot_loader.py  canonical_memory.py  canonical_memory_import.py  canonical_memory_manifest.py  capability_checker.py  capability_registry.py  change_classifier.py  cognee_projection_adapter.py  event_ledger.py  evidence_packet.py  family_document_intake.py  family_document_runtime.py  family_document_taxonomy.py  gate_engine.py  governed_runtime.py  governed_task_executor.py  graph_memory_index.py  graphify_adapter.py  hermes_memory_adapter.py  hermes_model_inventory.py  hermes_private_memory.py  hermes_task_router.py  hermes_worker.py  home_edge_v1.py  isolated_process_executor.py  (+83 more)
docs/: ACTION_GATE.md  ADAPTIVE_PRACTICAL_LEARNING.md  ASSISTANT_CONTROL_ROUTE.md  AUDIT_LEDGER.md  AUFMASS_DXF_ADAPTER.md  AUFMASS_ENGINE.md  AUFMASS_EXPORTER.md  AUFMASS_GEOMETRY_TOOLCHAIN.md  AUFMASS_MANUAL_ADAPTER.md  AUFMASS_MEMORY.md  AUFMASS_PARSERS.md  AUFMASS_PRIVATE_PILOT_PROTOCOL.md  AUFMASS_PRIVATE_REVIEW_ROUTE.md  AUFMASS_PRIVATE_WORKSPACE_CONTRACT.md  AUFMASS_ROOM_MATCHER.md  AUFMASS_ROOM_REVIEW_TABLE.md  AUFMASS_SECTION_OPENING_HEIGHT_REVIEW.md  AUFMASS_SOURCE_PACK.md  AUFMASS_WORKFLOW.md  BEHAVIOR_RULES_INTAKE.md  CANONICAL_MEMORY_MIGRATION.md  COGNEE_MEMORY.md  CONTAINER_PACKAGE_VALIDATION.md  CONTROL_BOARD.md  DEVELOPMENT_DEPARTMENT.md  DEVELOPMENT_DEPARTMENT_ROADMAP.md  FAMILY_DOCUMENT_INTAKE.md  GPT_5_6_EVALUATION.md  GRAPHIFY_MEMORY_ADAPTER.md  GRAPH_MEMORY.md  HERMES_AUTHORITY_BOUNDARY.md  HERMES_ESCALATION_RULES.md  HERMES_MEMORY_GATEWAY.md  HERMES_NOISE_RULE.md  HERMES_OUTPUT_PACKET.md  HERMES_PRIVATE_MEMORY.md  HERMES_ROLE_CONTRACT.md  (+87 more)
(+482 files in other folders)
