[project]
name = "skeleton-core"
version = "0.1.0"
description = "External model-neutral control layer for LLM-assisted work"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]
aufmass-dxf = [
  "ezdxf",
]
aufmass-pdf = [
  "pdfplumber",
  "pypdf",
]
aufmass-image = [
  "pillow",
  "opencv-python-headless",
  "scikit-image",
]
aufmass-parsers = [
  "ezdxf",
  "pdfplumber",
  "pypdf",
  "pillow",
  "opencv-python-headless",
  "scikit-image",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
