[project]
name = "skeleton-core"
version = "0.1.0"
description = "External model-neutral control layer for LLM-assisted work"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "jinja2>=3.1.0,<4.0.0",
  "PyYAML>=6.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "beautifulsoup4>=4.12.0,<5.0.0",
  "httpx>=0.27.0,<1.0.0",
  "pytest>=8.0.0",
  "jsonschema>=4.22.0,<5.0.0",
]
aufmass-geometry = [
  "numpy==2.4.6",
  "ezdxf==1.4.4",
  "shapely==2.1.2",
  "networkx==3.6.1",
  "pillow==12.2.0",
]
aufmass-dxf = [
  "ezdxf",
]
aufmass-pdf = [
  "pdfplumber",
  "pypdf",
]
aufmass-image = [
  "pillow",
  "opencv-python-headless",
  "scikit-image",
]
aufmass-parsers = [
  "ezdxf",
  "pdfplumber",
  "pypdf",
  "pillow",
  "opencv-python-headless",
  "scikit-image",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
