[project]
name = "skeleton-core"
version = "0.1.0"
description = "External model-neutral control layer for LLM-assisted work"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0.0",
]

[project.optional-dependencies]
cognee = [
  "cognee==1.4.0",
]
dev = [
  "pytest>=8.0.0",
  "jsonschema>=4.22.0,<5.0.0",
  "fastapi==0.116.1",
  "jinja2==3.1.6",
  "uvicorn==0.35.0",
  "httpx==0.28.1",
]
aufmass-geometry = [
  "numpy==2.4.6",
  "ezdxf==1.4.4",
  "shapely==2.1.2",
  "networkx==3.6.1",
  "pillow==12.2.0",
]
aufmass-dxf = [
  "ezdxf",
]
aufmass-pdf = [
  "pdfplumber",
  "pypdf",
]
aufmass-image = [
  "pillow",
  "opencv-python-headless",
  "scikit-image",
]
aufmass-parsers = [
  "ezdxf",
  "pdfplumber",
  "pypdf",
  "pillow",
  "opencv-python-headless",
  "scikit-image",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
